// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildFilterConfig it should return a dictionary of all filters 1`] = `
Object {
  "activity-1": Object {
    "field": "activity",
    "id": "activity-1",
    "operand": "swimming",
    "operator": "contains",
  },
  "activity-2": Object {
    "field": "activity",
    "id": "activity-2",
    "operand": "tennis",
    "operator": "contains",
  },
  "activity-3": Object {
    "field": "activity",
    "id": "activity-3",
    "operand": "golfing",
    "operator": "contains",
  },
  "numberOfPeople": Object {
    "field": "numberOfPeople",
    "id": "numberOfPeople",
    "operand": 2,
    "operator": "==",
  },
  "priceMax": Object {
    "field": "price",
    "id": "priceMax",
    "operand": 500,
    "operator": "<",
  },
  "priceMin": Object {
    "field": "price",
    "id": "priceMin",
    "operand": 200,
    "operator": ">",
  },
}
`;

exports[`buildFilterConfig it should return a dictionary of groupOfFilter by key of group 1`] = `
Object {
  "0": Array [
    Object {
      "field": "price",
      "id": "priceMin",
      "operand": 200,
      "operator": ">",
    },
    Object {
      "field": "price",
      "id": "priceMax",
      "operand": 500,
      "operator": "<",
    },
  ],
  "1": Array [
    Object {
      "field": "numberOfPeople",
      "id": "numberOfPeople",
      "operand": 2,
      "operator": "==",
    },
  ],
  "2": Array [
    Object {
      "field": "activity",
      "id": "activity-1",
      "operand": "swimming",
      "operator": "contains",
    },
    Object {
      "field": "activity",
      "id": "activity-2",
      "operand": "tennis",
      "operator": "contains",
    },
    Object {
      "field": "activity",
      "id": "activity-3",
      "operand": "golfing",
      "operator": "contains",
    },
  ],
}
`;

exports[`buildFilterConfig it should return only the filters applied 1`] = `
Array [
  Object {
    "field": "price",
    "id": "priceMin",
    "operand": 200,
    "operator": ">",
  },
  Object {
    "field": "activity",
    "id": "activity-1",
    "operand": "swimming",
    "operator": "contains",
  },
  Object {
    "field": "activity",
    "id": "activity-2",
    "operand": "tennis",
    "operator": "contains",
  },
]
`;
